Revision history for Geometry-Primitive

0.03
  - Add MI version because Yuval yelled at me
0.02    2008-07-09
  - Package fixes, no changes

0.01    Date/time
        First version, released on an unsuspecting world.
